# BookContentGenerator

./: .gitignore  PRD_corpusBuilder.md  README.md  pyproject.toml  requirements.txt
Data/: Dungeon_Crawler_Carl_-_Matt_Dinniman.epub  book1_wiki.json
corpus/: graph_3d.html
corpus/characters/: 35_years_old_woman.md  _index.md  a_bopca_protector.md  a_giant_goblin.md  a_level_four.md  a_massive_hornet.md  a_shambling_acid_impaler.md  a_talking_cat.md  a_third_male.md  a_woman_wearing_a_simple_black.md  ad.md  administrator_mukta.md  african_soldiers.md  african_warriors.md  agatha.md  ai.md  ai_thing.md  aiming.md  aiming_skill.md  albert_ii.md  albert_ii_the_first_earth_mamm.md  amw.md  andy_warhol_wig.md  angel.md  angel_the_cocker_spaniel.md  angels_owner.md  arcanist.md  armored_elephantsized_sixlegge.md  asian.md  assigned_planetary_regent.md  audience.md  axebeak.md  ba.md  baby_uno.md  baby_yoda.md  bad_llama.md  bad_llama_mob.md  badger_head.md  bald_head.md  ball_formation.md  (+560 more)
corpus/factions/: _index.md  admins.md  african_soldiers.md  ai.md  anguish_magic.md  ball_of_swine.md  battle_royale.md  blender_fiend.md  bomb_bards.md  bopca_protector.md  borant.md  borant_corporation.md  borough_boss.md  borough_bosses.md  borough_field_guild.md  boxes.md  brandon_and_his_crew.md  brindle_grubs.md  brindled_vespas.md  bronze_boxes.md  brynhilds_daughters.md  bugaboo.md  (+119 more)
src/: __init__.py  config.py  pipeline.py  reorganize_corpus.py  visualize.py
tests/: __init__.py  test_alias_resolver.py  test_corpus_writer.py  test_epub_parser.py  test_graph_builder.py
(+1064 files in other folders)
